# aoty-recommender

./: .gitignore  manage.py  pyproject.toml
aoty_recommender/: asgi.py  settings.py  urls.py  wsgi.py
aoty_recommender_website/: admin.py  apps.py  forms.py  models.py  scraper.py  urls.py  views.py
aoty_recommender_website/migrations/: 0001_initial.py  0002_album_artist_song.py  0003_alter_album_artist.py
aoty_recommender_website/templates/: album_details.html  album_search.html  artist_details.html  base.html  home.html  login.html  navbar.html  register.html  song_details.html
