[tool.poetry]
name = "aoty-recommender"
version = "0.1.0"
description = ""
authors = ["Lukasz Calka <lukasz.calka@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
